# 2D-Perception

./: README.md
carla_object_detection/: inference.py  main.py  pyproject.toml
carla_object_detection/config/: config.yaml
carla_object_detection/dataloader/: dataloader.py
carla_object_detection/executors/: callback.py  loss.py  train.py
carla_object_detection/utils/: YOLO_to_COCO.py  cls_loss.py  iou_loss.py  obj_loss.py  plot.py  split_data.py  utility_func.py
disparity_refinement/: .gitignore  main.py  pyproject.toml
disparity_refinement/config/: config.yaml
disparity_refinement/dataloader/: co_transforms.py  data_loader.py  dataset.py  transforms.py
disparity_refinement/executors/: train.py
disparity_refinement/model/: DilNet.py  StereoRefineNet.py
image_classification/: .gitignore  hyperparameter_tuning.py  inference.py  main.py  pyproject.toml
image_classification/config/: config.yaml
image_classification/dataloader/: data_loader.py
image_classification/executors/: train.py
image_classification/model/: model.py
image_classification/utils/: util.py
object_detection/: .gitignore
object_detection/YOLO-NAS/: main.py  pyproject.toml
object_detection/YOLO-NAS/config/: config.yaml
object_detection/YOLO-NAS/dataloader/: dataloader.py
object_detection/YOLO-NAS/executors/: callback.py  loss.py  train.py
object_detection/YOLO-NAS/utils/: YOLO_to_COCO.py  calc_mean_std.py  cls_loss.py  iou_loss.py  obj_loss.py  utility_func.py
object_detection/YOLOv4_darknet/: .gitignore  pyproject.toml
object_detection/YOLOv4_darknet/config/: yolov4-tiny-3l.cfg  yolov4-tiny.cfg  yolov7-tiny.cfg
object_detection/YOLOv4_darknet/tool/: darknet2onnx.py  darknet2pytorch.py
object_detection/YOLOv4_darknet/util/: img_accumulation.py
