[project]
name = "yolov4-darknet"
version = "0.1.0"
description = "Train YOLO models via darknet v3"
authors = [
    {name = "Rohan",email = "rohankhaire.work@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "onnx (>=1.17.0,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
